--- a/src/Components/HeroSection/Hero.css
+++ b/src/Components/HeroSection/Hero.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    height: 700px;
+    height: 680px;
     width: 100%;
 }
 
@@ -54,7 +54,7 @@ a {
 }
 
 a:hover {
-    color: rgb(128, 128, 128);
+    color: #808080;
 }
 
 @media only screen and (max-width: 414px) {
