--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -7,12 +7,13 @@
 
 .logo {
     width: 30%;
-    height: 30%;
+    height: 25%;
 }
 
 #logo {
-    width: 70px;
-    height: 60px;
+ 
+    width: 100px;
+    height: 100px;
     transition: transform .7s ease-in-out;
 }
 
@@ -21,10 +22,11 @@
 }
 
 nav ul {
+    padding-top: 50px;
     display: flex;
     align-items: center;
     gap: 20px;
-    height: 60px;
+    height: 50px;
 }
 
 nav ul li {
