--- a/src/Components/Pages/ContactPage/Contact.css
+++ b/src/Components/Pages/ContactPage/Contact.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 695px;
+  height: 700px;
 }
 
 .formular {
@@ -20,7 +20,7 @@
   justify-content: center;
   z-index: 1;
   position: relative;
-  color: #D1EBE2;
+  color: #ffffff;
 }
 
 .content-contact {
