--- a/src/Components/HeroSection/Hero.css
+++ b/src/Components/HeroSection/Hero.css
@@ -1,12 +1,13 @@
 .hero {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 680px;
     width: 100%;
 }
 
 .hero-section {
+    height: 650px;
     display: flex;
     flex-direction: column-reverse;
     justify-content: space-around;
@@ -15,7 +16,7 @@
 button {
     border-radius: 8px;
     border: 1px solid transparent;
-    padding: 0.6em 1.2em;
+    padding: 0.2em 1.2em;
     font-weight: 500;
     background-color: #1a1a1a;
     cursor: pointer;
@@ -46,7 +47,7 @@ button {
 .icons {
     display: flex;
     justify-content: space-around;
-    width: 30%;
+    width: 35%;
 }
 
 a {
